KSCM-2248 - Comments UI Tweaks 1. The comments text styles are off. They should be: Paragraph General text used for description and instruction is styled as the base font, with line spacing and maximum widths to facilitate optimal reading. font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1em; or 13px line-height: 18px; color: #000000; - Fixed
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70769 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -442,7 +442,6 @@ a[id *= "LearningObjectives-Icon-"]:hover {
     cursor: default !important;
 
     padding: 0px 6px;
-    margin-top: 4px;
 }
 
 [id^="course_format_table_"] > tbody> tr > td:first-child {
@@ -752,4 +751,12 @@ a[id *= "LearningObjectives-Icon-"]:hover {
 
 #course_review_authors_and_collaborators_details {
   margin-left : 20px;
+}
+
+#KSCM-Comment-Add {
+  text-indent: 1.5em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #000000;
 }
